spline/cmake: proper compiler flag usage
also suppress vzeroupper - not needed here

Signed-off-by: Matthias Kretz <kretz@kde.org>

--- a/spline/CMakeLists.txt
+++ b/spline/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_definitions(-fno-stack-protector) # Ubuntu adds -fstack-protector-strong / it's not a GCC default
+AddCompilerFlag(-fno-stack-protector) # Ubuntu adds -fstack-protector-strong / it's not a GCC default
+AddCompilerFlag(-mno-vzeroupper)
 build_example(spline main.cpp spline.cpp)
